# devbox

./: .gitignore  .gitlab-ci.yml  .markdownlint.json  .mcp.json  .pre-commit-config.yaml  .taplo.toml  CLAUDE.md  LICENSE  README.md  SETUP.md  TODO.md  biome.jsonc  changelog.config.js  css-styling-comparison-2025.md
.claude/: settings.json  statusline.py
.claude/skills/: README.md
.claude/skills/branch-cleanup/: SKILL.md
.claude/skills/commit-msg-lint/: SKILL.md
.claude/skills/git-reference/: SKILL.md
.claude/skills/git-rules/: REFERENCE.md  SKILL.md
.claude/skills/pr-policy/: SKILL.md
.devcontainer/: devcontainer.json  initialize.sh  postCreate.sh  postStart.sh
.devcontainer/features/aws-sam-cli/: README.md  devcontainer-feature.json  install.sh
.devcontainer/features/cargo/: README.md  (+2 more)
.github/instructions/: 00-general.instructions.md
.github/skills/: README.md
.github/workflows/: backend.yml  ci.yml  frontend.yml
.gitlab/issue_templates/: bug_report.md  feature_request.md
.gitlab/merge_request_templates/: standard.md
.serena/: project.yml
.serena/memories/: architecture.md  backend-dev-guide.md  cicd-rules.md  coding-conventions.md  deployment.md  dev-environment.md  frontend-dev-guide.md  git-branch-rules.md  infrastructure.md  setup-guide.md
api/: .gitignore  .gitlab-ci.yml  README.md  main.py  pyproject.toml
api/tests/: test_main.py
app/: .gitignore  .gitlab-ci.yml  README.md  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
app/.serena/: project.yml
app/src/: App.tsx  main.tsx
app/test/: sample.test.ts
doc/: SETUP.md
docs/: agent-skills.md  git-reference.md
next-daisyui-template/: .gitlab-ci.yml  biome.jsonc  package.json  pnpm-lock.yaml
next-daisyui-template/app/: page.tsx
next-daisyui-template/test/: sample.test.ts
python-template/: .gitlab-ci.yml  pyproject.toml
python-template/.claude/: settings.local.json
python-template/sample_pack/: main.py  sample.py
python-template/tests/: __init__.py  test_main.py
vite-serendie-template/: .gitlab-ci.yml  biome.jsonc  index.html  package.json  pnpm-lock.yaml
(+6 files in other folders)
