[project]
name = "devbox-python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.42.14",
  "fastapi>=0.126.0",
  "langchain>=1.2.0",
  "langchain-aws>=1.1.0",
  "langchain-community>=0.4.1",
  "langchain-core>=1.2.4",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
  "import-linter>=2.9",
  "poethepoet>=0.38.0",
  "pyright>=1.1.407",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
  "python-dotenv>=1.2.1",
  "ruff>=0.14.10",
]

[tool.poe.tasks]
format = "uv run --no-env-file -- ruff format ."
lint = "uv run --no-env-file -- ruff check --fix ."
type = "uv run --no-env-file -- pyright --project ."
test = "uv run --no-env-file -- pytest -q --junitxml=coverage/junit.xml --cov=. --cov-report=xml:coverage/coverage.xml --cov-report=html:coverage/coverage_html"
check = ["format", "lint", "type", "test"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sample_pack"]

[project.scripts]
sample-pack = "sample_pack.main:main"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"
preview = true

[tool.pyright]
typeCheckingMode = "basic"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
  "AIR",
  "EXE",
  "ERA",
  "COM812",
  "CPY",
  "NPY",
  "PD",
  "D100",
  "D104",
  "D400",
  "D415",
  "D203",
  "D213",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "F401", # unused-import
]
"tests/*" = ["S101", "ARG", "FBT", "PLR2004", "S311"]

[tool.ruff.lint.mccabe]
max-complexity = 10 # maximum complexity

[tool.ruff.lint.pydocstyle]
convention = "google" # docstring style
